# lemanic_life_science_graspit

./: .gitignore  .gitmodules  AUTHORS  CONTRIBUTING.md  LICENSE.md  README.md  data_structure.py  hello.py  pyproject.toml  run.sh  sensor.py
android-app/: README.md  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/ch/heigvd/iict/daa/template/: MainActivity.kt  MqttClientService.kt  RecycleViewAdapter.kt  SpeechRecognitionFragment.kt  SpeechRecognitionViewModel.kt  Worker.kt
android-app/app/src/main/res/layout/: activity_main.xml  fragment_speech_recognition.xml  image.xml
android-app/app/src/main/res/menu/: main_menu.xml
android-app/app/src/main/res/values/: strings.xml
android-app/gradle/: libs.versions.toml
calibration/: G_calibration_grasp_set.txt  G_calibration_set_release.txt  G_experiment.txt  Jo_calibration_grasp.txt  Jo_calibration_grasp_set.txt  Jo_calibration_release.txt  Jo_calibration_release_set.txt  Ju_calibration_grasp.txt  Ju_calibration_grasp_set.txt
dev/: publisher.py  subscriber.py
docker/: Dockerfile  docker-compose.yml
src/: data_structure.py
src/llsg/: __init__.py  audio.py  config.py  data_structure.py  driver.py  example_stimulation.py  stimulator.py
src/llsg/commander/: audio.py  commander.py
src/llsg/sensor/: sensor.py
src/llsg/stimulator/: driver.py  stimulator.py
src/llsg/utils/: time.py
src/sensor/: sensor.py
